syntax = "proto3";

package API.V1;

import "google/api/field_behavior.proto";

service VectorService {
      // prints the vectors and the ID
      rpc Print(PrintRequest) returns (PrintResponse) {
      }

      // prints the sum of a vector and return the sum to the user
      rpc Sum(SumRequest) returns (SumResponse) {
            }
}


// The request for the `print` operation.
message PrintRequest {
  // An array containing the vectors to print.
  Vector vectors   = 1 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message PrintResponse {
  // The sum of all printed.
  uint32   printed_count = 1;
}

// The request for the `sum` operation.
message SumRequest {
  // A vector to sum.
   Vector vectors  = 1;
}

message SumResponse {
  // The sum of the vectors.
  float sum = 1;
}

message Vector {

  // This is the vector's unique id.
  string                 id                                           = 1 [
    (google.api.field_behavior) = REQUIRED
  ];

  // This is the vector data included in the request.
  repeated float         values                                       = 2 [
    (google.api.field_behavior) = REQUIRED
  ];

}